--- a/kafka-to-hdfs-sync/pom.xml
+++ b/kafka-to-hdfs-sync/pom.xml
@@ -294,6 +294,17 @@
       <artifactId>kafka_2.11</artifactId>
       <version>0.9.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>net.sf.supercsv</groupId>
+      <artifactId>super-csv</artifactId>
+      <version>2.4.0</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.janino</groupId>
+      <artifactId>janino</artifactId>
+      <version>2.7.8</version>
+    </dependency>
     
     <dependency>
       <groupId>info.batey.kafka</groupId>
