Database to Database Sync App and Database to HDFS App: (#31)
1) Minor changes to pom.xml
2) DB-To-DB Sync Application Test to consider transform operator.

--- a/database-to-database-sync/pom.xml
+++ b/database-to-database-sync/pom.xml
@@ -9,7 +9,7 @@
 
   <!-- change these to the appropriate values -->
   <name>DataBase to DataBase Sync App</name>
-  <description>Ingest messages from source Database table to destination Database table.</description>
+  <description>Ingest messages from a source PostgreSQL Database table to destination PostgreSQL database table.</description>
 
   <properties>
     <!-- change this if you desire to use a different version of Apex Core -->
