--- a/kafka-to-database-sync/pom.xml
+++ b/kafka-to-database-sync/pom.xml
@@ -9,7 +9,7 @@
 
   <!-- change these to the appropriate values -->
   <name>Kafka to DataBase Sync App</name>
-  <description>Ingest messages from kafka to Database table.</description>
+  <description>Ingest messages from kafka to PostgreSQL Database table.</description>
 
   <properties>
     <!-- change this if you desire to use a different version of Apex Core -->
