--- a/hdfs-to-kafka-sync/pom.xml
+++ b/hdfs-to-kafka-sync/pom.xml
@@ -33,7 +33,7 @@
 
   <properties>
     <!-- change this if you desire to use a different version of Apex Core -->
-    <apex.version>3.4.0</apex.version>
+    <apex.version>3.6.0-dt20161215</apex.version>
     <malhar.version>3.6.0</malhar.version>
     <apex.apppackage.classpath>lib/*.jar</apex.apppackage.classpath>
     <apex.apppackage.tags>app-template, hdfs, kafka, sync</apex.apppackage.tags>
