SPOI-10221 Added Readme for kinesis to s3 application (#46)

--- a/kinesis-to-s3/pom.xml
+++ b/kinesis-to-s3/pom.xml
@@ -8,15 +8,17 @@
   <packaging>jar</packaging>
 
   <!-- change these to the appropriate values -->
-  <name>Kinesis S3 App</name>
+  <name>Kinesis to S3 App</name>
   <description>Ingest messages from Kinesis to Amazon S3.</description>
 
   <properties>
     <!-- change this if you desire to use a different version of Apex Core -->
-    <apex.version>3.5.0</apex.version>
+    <apex.version>3.4.0</apex.version>
     <malhar.version>3.7.0-SNAPSHOT</malhar.version>
     <aws.version>1.9.10</aws.version>
     <apex.apppackage.classpath>lib/*.jar</apex.apppackage.classpath>
+    <apex.apppackage.tags>app-template, kinesis, s3</apex.apppackage.tags>
+    <apex.apppackage.longDescription>README.md</apex.apppackage.longDescription>
   </properties>
 
   <build>
