--- a/operators/pom.xml
+++ b/operators/pom.xml
@@ -14,7 +14,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.deploy.skip>false</maven.deploy.skip>
-    <apex.core.version>3.4.0</apex.core.version>
+    <apex.core.version>3.5.0</apex.core.version>
     <surefire.args>-Xmx2048m</surefire.args>
   </properties>
 
@@ -25,6 +25,7 @@
   <modules>
     <!-- add other operator modules here -->
     <module>library</module>
+    <module>contrib</module>
   </modules>
   
   
