--- a/operators/contrib/pom.xml
+++ b/operators/contrib/pom.xml
@@ -5,10 +5,14 @@
     <groupId>com.datatorrent</groupId>
     <version>0.1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>moodi-operator-library</artifactId>
-  <name>moodi-operator-library</name>
+  <artifactId>moodi-contrib-library</artifactId>
+  <name>moodi-contrib-library</name>
   <packaging>jar</packaging>
-  
+
+  <properties>
+    <malhar.version>3.8.0-SNAPSHOT</malhar.version>
+  </properties>
+
    <build>
     <plugins>
       <!-- Publish tests jar -->
@@ -159,39 +163,10 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.datatorrent</groupId>
-      <artifactId>schema-api</artifactId>
-      <version>3.9.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.datatorrent</groupId>
-      <artifactId>schema-propagation</artifactId>
-      <version>3.9.0-SNAPSHOT</version>
-      <scope>test</scope>
-   </dependency>
-   <dependency>
-      <groupId>net.sf.supercsv</groupId>
-      <artifactId>super-csv</artifactId>
-      <version>2.4.0</version>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-kinesis</artifactId>
+      <version>1.9.10</version>
       <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>com.github.fge</groupId>
-      <artifactId>json-schema-validator</artifactId>
-      <version>2.0.1</version>
-      <optional>true</optional>
-   </dependency>
-    <dependency>
-      <groupId>org.jooq</groupId>
-      <artifactId>jooq</artifactId>
-      <version>3.6.4</version>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.1</version>
-      <type>jar</type>
     </dependency>
   </dependencies>
 
