--- a/app-templates/pom.xml
+++ b/app-templates/pom.xml
@@ -162,5 +162,6 @@
     <module>kafka-to-kafka-filter-transform</module>
     <module>kafka-to-cassandra-filter-transform</module>
     <module>kinesis-to-s3</module>
+    <!--module>s3-to-redshift</module!-->
   </modules>
 </project>
