--- a/app-templates/pom.xml
+++ b/app-templates/pom.xml
@@ -12,6 +12,8 @@
   
   
   <properties>
+    <apex.version>3.7.0-SNAPSHOT</apex.version>
+    <malhar.version>3.8.0-SNAPSHOT</malhar.version>
     <apex.apppackage.classpath>lib/*.jar</apex.apppackage.classpath>
   </properties>
 
@@ -143,6 +145,24 @@
 
   <dependencies>
    <!-- Add dependencies here -->
+    <dependency>
+      <groupId>org.apache.apex</groupId>
+      <artifactId>apex-engine</artifactId>
+      <version>${apex.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.apex</groupId>
+      <artifactId>apex-common</artifactId>
+      <version>${apex.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.10</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>com.datatorrent</groupId>
    	  <artifactId>moodi-operator-library</artifactId>
