--- a/app-templates/s3-to-redshift/pom.xml
+++ b/app-templates/s3-to-redshift/pom.xml
@@ -19,8 +19,6 @@
 
   <properties>
     <!-- change this if you desire to use a different version of Apex Core -->
-    <apex.version>3.7.0-SNAPSHOT</apex.version>
-    <malhar.version>3.8.0-SNAPSHOT</malhar.version>
     <apex.apppackage.classpath>lib/*.jar</apex.apppackage.classpath>
     <apex.apppackage.tags>app-template, redshift, s3</apex.apppackage.tags>
     <apex.apppackage.longDescription>README.md</apex.apppackage.longDescription>
@@ -279,12 +277,6 @@
       <version>1.2.1.1001</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.apex</groupId>
-      <artifactId>apex-common</artifactId>
-      <version>${apex.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-s3</artifactId>
       <version>1.9.10</version>
@@ -300,21 +292,10 @@
       <artifactId>janino</artifactId>
       <version>2.7.8</version>
     </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.10</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.apex</groupId>
-      <artifactId>apex-engine</artifactId>
-      <version>${apex.version}</version>
-      <scope>test</scope>
-    </dependency>
+
     <dependency>
       <groupId>com.datatorrent</groupId>
-      <artifactId>moodi-operator-library</artifactId>
+      <artifactId>moodi-aws-connectors</artifactId>
       <version>0.1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
