SPOI-11570 1) Fixed the pom dependencies in app-templates. 2) Fixed the secretKey issue in Kinesis to redshift app template. 3) Format the dashboard for Kinesis to Redshift app template

--- a/app-templates/kinesis-to-redshift/pom.xml
+++ b/app-templates/kinesis-to-redshift/pom.xml
@@ -9,16 +9,18 @@
   </parent>
 
   <groupId>com.datatorrent.apps</groupId>
-  <version>0.9.0</version>
+  <version>0.10.0</version>
   <artifactId>kinesis-to-redshift</artifactId>
   <packaging>jar</packaging>
 
   <!-- change these to the appropriate values -->
-  <name>Kinesis-to-Redshift</name>
+  <name>Kinesis to Redshift App</name>
   <description>Ingest records from AWS kinesis streams and writes them to AWS Redshift database.</description>
 
   <properties>
     <apex.apppackage.classpath>lib/*.jar</apex.apppackage.classpath>
+    <apex.apppackage.tags>app-template, redshift, kinesis</apex.apppackage.tags>
+    <apex.apppackage.longDescription>README.md</apex.apppackage.longDescription>
   </properties>
 
   <build>
@@ -292,11 +294,6 @@
       <groupId>com.datatorrent</groupId>
       <artifactId>moodi-aws-connectors</artifactId>
       <version>0.1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-java-sdk-kinesis</artifactId>
-      <version>1.9.10</version>
     </dependency>
     <dependency>
       <groupId>com.datatorrent</groupId>
