--- a/app-templates/s3-to-redshift/pom.xml
+++ b/app-templates/s3-to-redshift/pom.xml
@@ -255,6 +255,16 @@
           <artifactId>*</artifactId>
         </exclusion>
       </exclusions!-->
+      <exclusions>
+        <exclusion>
+          <groupId>com.amazonaws</groupId>
+          <artifactId>aws-java-sdk-s3</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.amazon.redshift</groupId>
@@ -277,11 +287,6 @@
       <groupId>com.datatorrent</groupId>
       <artifactId>moodi-aws-connectors</artifactId>
       <version>0.1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.datatorrent</groupId>
-      <artifactId>metrics-plugin</artifactId>
-      <version>3.9.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <repositories>
