SPOI-13034 Fix the jackson library issue

--- a/app-templates/hdfs-to-s3-sync/pom.xml
+++ b/app-templates/hdfs-to-s3-sync/pom.xml
@@ -19,8 +19,8 @@
   <description>Ingest and backup hadoop HDFS data to Amazon S3 for data upload from hadoop to Amazon.</description>
 
   <properties>
-    <apex.version>3.6.0-SNAPSHOT</apex.version>
-    <malhar.version>3.7.0</malhar.version>
+    <apex.version>3.6.0</apex.version>
+    <malhar.version>3.9.0-SNAPSHOT</malhar.version>
     <apex.apppackage.classpath>lib/*.jar</apex.apppackage.classpath>
     <apex.apppackage.tags>app-template, hdfs, s3, sync</apex.apppackage.tags>
     <apex.apppackage.longDescription>README.md</apex.apppackage.longDescription>
@@ -270,6 +270,12 @@
       <groupId>org.apache.apex</groupId>
       <artifactId>malhar-library</artifactId>
       <version>${malhar.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.apex</groupId>
@@ -281,6 +287,12 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-s3</artifactId>
       <version>1.10.73</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
